# GalaxyEngine

./: .gitignore  CMakeLists.txt  License.txt  Readme.md  cmake_install.cmake  vcpkg.json
Cluster/: CMakeLists.txt  cmake_install.cmake
Cluster/src/: Sandbox.cpp  Sandbox.h  main.cpp
Galaxy/: CMakeLists.txt  cmake_install.cmake
Galaxy/src/Core/: Application.cpp  Application.h  Application.hpp  Core.cmake  EntryPoint.cpp  Log.cpp  Log.h  Log.hpp  Utils.h  Utils.hpp
Galaxy/src/Events/: Event.cpp  Event.h  Event.hpp  EventType.h  EventType.hpp  Events.cmake  IEventListener.cpp  IEventListener.hpp  KeyCodes.h  KeyCodes.hpp  KeyboardEvent.cpp  KeyboardEvent.h  KeyboardEvent.hpp  MouseCodes.h  MouseCodes.hpp  MouseEvent.cpp  MouseEvent.h  MouseEvent.hpp
Galaxy/src/Events/EventListeners/: IEventListener.hpp  MouseEventListener.cpp  MouseEventListener.hpp
Galaxy/src/Math/: Math.cmake  Vector2D.cpp  Vector2D.h  Vector2D.hpp
Tests/GalaxyEngineTests/: .gitignore  CMakeLists.txt  Listener.cpp  dummy.cpp  main.cpp
Tests/GalaxyEngineTests/Events/: Events.cmake
Tests/GalaxyEngineTests/Tests/Events/: Events.cmake  TestMouseButtonEvent.cpp
cmake/: Testing.cmake  Warnings.cmake
